# doc_catalog

./: Cargo.toml
src/: main.rs
src/application/: mod.rs
src/application/dto/: create_document.rs  delete_document.rs  list_documents.rs  mod.rs  search_documents.rs  update_document.rs
src/application/repositories/: document_repository.rs  mod.rs
src/application/tests/: create_document.rs  delete_document.rs  document_repository.rs  list_documents.rs  search_documents.rs  update_document.rs
src/application/tests/utils/: mod.rs
src/application/use_cases/: create_document.rs  delete_document.rs  list_documents.rs  mod.rs  search_documents.rs  update_document.rs
src/application/utils/: mod.rs  timestamp.rs
src/cli/: dependencies.rs  mod.rs
src/cli/commands/: add.rs  list.rs  mod.rs  search.rs
src/cli/printer/: mod.rs
src/cli/tests/: add_command.rs  list_command.rs  mod.rs  search_command.rs
src/cli/utils/: mod.rs
src/domain/: mod.rs
src/domain/entities/: document.rs  document_type.rs  metadata.rs  mod.rs
src/domain/errors/: domain_error.rs
src/domain/tests/: document.rs  tags.rs
src/domain/utils/: mod.rs  tags.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: connection.rs  mod.rs  schema.rs
src/infrastructure/repositories/: mod.rs  sqlite_document_repository.rs
src/infrastructure/tests/: sqlite_document_repository.rs
