[package]
name = "doc_catalog"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "doclib"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
